Fixes layout bugs for big networks in networks section

--- a/frontend/src/app/components/network-averages/network-averages.component.scss
+++ b/frontend/src/app/components/network-averages/network-averages.component.scss
@@ -3,7 +3,3 @@
 .totals {
   font-size: 0.95rem;
 }
-
-.center {
-  text-align: center;
-}
